<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/historial">

        <SwitchPreferenceCompat
            app:key="historial"
            app:title="@string/generarHistorial" />






    </PreferenceCategory>


    <PreferenceCategory app:title="@string/contactos">

    <SwitchPreferenceCompat
        app:key="guardarContacto"
        app:title="@string/guardarContacto" />

    </PreferenceCategory>
</PreferenceScreen>
