<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btImportarContactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importar_contactos"
        app:layout_constraintBottom_toTopOf="@+id/tvSeleccionarLugarAlmacenamiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeleccionarLugarAlmacenamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_lugar_de_almacenamiento"
        app:layout_constraintBottom_toTopOf="@+id/btGuardarArchivo"
        app:layout_constraintEnd_toEndOf="@+id/btImportarContactos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btImportarContactos"
        app:layout_constraintTop_toBottomOf="@+id/btImportarContactos" />

    <RadioGroup
        android:id="@+id/rgOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btGuardarArchivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionarLugarAlmacenamiento">

        <RadioButton
            android:id="@+id/rbInterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interno" />

        <RadioButton
            android:id="@+id/rbPrivado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privado" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCargarContactos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/hintTextViewContactos" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btGuardarArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/guardar_contactos_en_archivo"
        app:layout_constraintBottom_toTopOf="@+id/btCargarArchivo"
        app:layout_constraintEnd_toEndOf="@+id/tvSeleccionarLugarAlmacenamiento"
        app:layout_constraintStart_toStartOf="@+id/tvSeleccionarLugarAlmacenamiento"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionarLugarAlmacenamiento" />

    <Button
        android:id="@+id/btCargarArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargar_archivo_con_contactos"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/btGuardarArchivo"
        app:layout_constraintStart_toStartOf="@+id/btGuardarArchivo"
        app:layout_constraintTop_toBottomOf="@+id/btGuardarArchivo" />

</androidx.constraintlayout.widget.ConstraintLayout>